--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
   "chardet>=5.1",
+  "tqdm>=4.66",
 ]
 
 [project.optional-dependencies]
